Frontend/src/presentation/styles/index.css
@import "tailwindcss";

@keyframes orange-glow {

    0%,
    100% {
        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -1px rgba(0, 0, 0, 0.03);
        border-color: rgba(249, 115, 22, 0.2);
    }

    50% {
        box-shadow: 0 0 25px rgba(249, 115, 22, 0.75);
        border-color: rgba(249, 115, 22, 1);
    }
}

.animate-glow-orange {
    animation: orange-glow 1.5s ease-in-out infinite;
}

